# measure-stdin-throughput

./: LICENSE  README.md  measure.cabal
src/: Main.hs
