name:                measure
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Moritz Clasmeier
maintainer:          mtesseract@silverratio.net
copyright:           (c) 2017 Moritz Clasmeier
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable measure
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -rtsopts -threaded
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , conduit
                     , bytestring
                     , conduit-extra
                     , conduit-combinators
                     , classy-prelude
                     , async
                     , stm
                     , time
                     , metrics >= 0.4.1.1
